--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "express": "^4.19.2",
+    "mongoose": "^8.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
