--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "^4.19.2",
     "mongoose": "^8.3.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
