--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "express": "^4.19.2",
     "mongoose": "^8.3.3",
     "react": "^18.2.0",
