--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.8",
     "express": "^4.19.2",
     "font-awesome": "^4.7.0",
+    "jwt-decode": "^4.0.0",
     "mongodb": "^6.6.2",
     "mongoose": "^8.3.3",
     "react": "^18.2.0",
